# aoc2021

./: pyproject.toml
src/aoc2021/five/: coord.py  line_segment.py  main.py  vent_map.py
src/aoc2021/four/: bingo_board.py  bingo_cell.py  bingo_game.py  main.py
src/aoc2021/one/: increases.py  main.py
src/aoc2021/six/: main.py  school.py
src/aoc2021/three/: count_per_column.py  main.py
src/aoc2021/two/: location.py  location_part_2.py  main.py
tests/five/: test_five.py
tests/four/: test_four.py
tests/one/: test_1.py  test_one.py
tests/six/: test_six.py
tests/three/: test_three.py
tests/two/: test_two.py
